--- a/src/securitySchemes/bearerAuth.yaml
+++ b/src/securitySchemes/bearerAuth.yaml
@@ -1,4 +1,3 @@
 bearerAuth:
-  type: http # I think this needs to be 'mutualTLS' which is supported in OAS 3.1.0
+  type: http # I think this needs to be 'mutualTLS' which is supported in OAS 3.1.0 but tooling is lagging
   scheme: mutual
-  
