--- a/src/schemas/k_size.yaml
+++ b/src/schemas/k_size.yaml
@@ -1,5 +1,6 @@
 k_size:
   type: integer
+  description: https://github.com/Chia-Network/chia-blockchain/wiki/k-sizes
   default: 32
   enum:
     - 25
