--- a/src/schemas/block_record.yaml
+++ b/src/schemas/block_record.yaml
@@ -1,30 +1,41 @@
 block_record:
   type: object
+  description: "This class is not included or hashed into the blockchain, but it is kept in memory as a more
+              efficient way to maintain data about the blockchain. This allows us to validate future blocks,
+              difficulty adjustments, etc, without saving the whole header block in memory."
   properties: 
     challenge_block_info_hash: 
       type: string
+      description: Hash of challenge chain data, used to validate end of slots in the future.
     challenge_vdf_output: 
       type: object
+      description: This is the intermediary VDF output at ip_iters in challenge chain.
       properties: 
         data: 
           type: string
     deficit: 
       type: integer
       format: uint8
+      description: A deficit of 16 is an overflow block after an infusion. Deficit of 15 is a challenge block.
     farmer_puzzle_hash: 
       type: string
     fees: 
       type: integer
       format: uint64
+      nullable: true
+      description: Transaction block (present iff is_transaction_block)
     finished_challenge_slot_hashes: 
       type: string
       format: nullable
+      description: Slot (present iff this is the first SB in sub slot)
     finished_infused_challenge_slot_hashes: 
       type: string
       format: nullable
+      description: Slot (present iff this is the first SB in sub slot)
     finished_reward_slot_hashes: 
       type: string
       format: nullable
+      description: Slot (present iff this is the first SB in sub slot)
     header_hash: 
       type: string
     height: 
@@ -33,15 +44,19 @@ block_record:
     infused_challenge_vdf_output: 
       type: string
       format: nullable
+      description: This is the intermediary VDF output at ip_iters in infused cc, if deficit less than or equal to 3.
     overflow: 
       type: boolean
     pool_puzzle_hash: 
       type: string
+      description: Need to keep track of these because Coins are created in a future block.
     prev_hash: 
       type: string
+      description: Header hash of the previous block. Transaction block (present iff is_transaction_block).
     prev_transaction_block_hash: 
       type: string
       format: nullable
+      description: Header hash of the previous transaction block
     prev_transaction_block_height: 
       type: integer
       format: int32
@@ -53,6 +68,7 @@ block_record:
       format: nullable
     reward_infusion_new_challenge: 
       type: string
+      description: The reward chain infusion output, input to next VDF
     signage_point_index: 
       type: integer
       format: uint8
@@ -65,9 +81,12 @@ block_record:
     timestamp: 
       type: integer
       format: uint64
+      nullable: true
     total_iters: 
       type: integer
       format: bigint
+      description: Total number of VDF iterations since genesis, including this block
     weight: 
       type: integer
-      format: bigint  
+      format: bigint
+      description: Total cumulative difficulty of all ancestor blocks since genesis
