--- a/src/harvester.yaml
+++ b/src/harvester.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   description: "The Chia node and services come with a JSON RPC API server that allows you to access information and control the services. These are accessible via HTTP, WebSockets, or via client SDKs. The ports can be configured in ~/.chia/mainnet/config/config.yaml. The RPC ports should not be exposed to the internet. TLS certificates are used to secure the communication."
   version: 1.2.11
-  title: chia RPC
+  title: Chia RPC
   termsOfService: https://www.chia.net/assets/legal/Guidelines-for-Using-Chia-Network.pdf
   contact:
     name: Chia Network
