--- a/src/farmer.yaml
+++ b/src/farmer.yaml
@@ -28,6 +28,29 @@ components:
       $ref: "./schemas/harvester_info.yaml#/harvester_info"
     pool_state_info:
       $ref: "./schemas/pool_state_info.yaml#/pool_state_info"
+    proof_of_space:
+      $ref: "./schemas/proof_of_space.yaml#/proof_of_space"
+    farmer_signage_point:
+      $ref: "./schemas/farmer_signage_point.yaml#/farmer_signage_point"
+    signage_point_bundle:
+      type: object
+      properties:
+        signage_point:
+          $ref: "#/components/schemas/farmer_signage_point"
+        proofs: 
+          # i haven't found this populated in the wild so this is based by examining the python 
+          # probably wrong but based off of this in farmer.py - line 105
+            # Keep track of harvester plot identifier (str), target sp index, and PoSpace for each challenge
+            # self.proofs_of_space: Dict[bytes32, List[Tuple[str, ProofOfSpace]]] = {}
+          type: array
+          # tuple is better supported in opanapi 3.1.0
+          # https://stackoverflow.com/questions/57464633/how-to-define-a-json-array-with-concrete-item-definition-for-every-index-i-e-a
+          items:
+            oneOf:
+              - type: string
+              - $ref: "#/components/schemas/proof_of_space"
+            minItems: 2
+            maxItems: 2    
     apiResponse:
       $ref: "./schemas/apiResponse.yaml#/apiResponse"
   securitySchemes:
@@ -200,6 +223,57 @@ paths:
       responses:
         200:
           $ref: "#/components/responses/empty"
+  /get_signage_point:
+    post:
+      tags:
+      - Farmer
+      summary: Get's a signage point by hash.
+      description: Get's a signage point by hash.
+      operationId: get_signage_point
+      requestBody:
+        description: The signage point hash
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - sp_hash
+              properties:
+                sp_hash:
+                  type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/signage_point_bundle"
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
+  /get_signage_points:
+    post:
+      tags:
+      - Farmer
+      summary: Get signage points.
+      description: Get signage points.
+      operationId: get_signage_points
+      requestBody:
+        $ref: "#/components/requestBodies/empty"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  signage_points:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/signage_point_bundle"
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"                  
 externalDocs:
   description: Find out more about chia
   url: http://chia.net
